entry editor and navigation

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
   <head>
+    <base href="/"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
@@ -11,6 +12,9 @@
     <script nomodule src="/build/ambulance.js"></script>
   </head>
   <body style="font-family: 'Roboto'; ">
-    <mt-wac></mt-wac>
+    <!-- <mt-wac></mt-wac>
+    <mt-ambulance-wl-editor></mt-ambulance-wl-editor> -->
+
+    <mt-ambulance-wl-app base-path="/ambulance-wl/"></mt-ambulance-wl-app>
   </body>
 </html>
