Added ambulance waiting list API

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
     <!-- <mt-wac></mt-wac>
     <mt-ambulance-wl-editor></mt-ambulance-wl-editor> -->
 
-    <mt-ambulance-wl-app base-path="/ambulance-wl/"></mt-ambulance-wl-app>
+    <mt-ambulance-wl-app ambulance-id="bobulova" api-base="http://localhost:5555/api" base-path="/ambulance-wl/"></mt-ambulance-wl-app>
   </body>
 </html>
